# promptify

./: README.md  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  prompt.rs
src/lib/: api.js
src/lib/components/: Nav.svelte  PromptCard.svelte  PromptForm.svelte  TagInput.svelte
src/lib/stores/: promptStore.js
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/create/: +page.svelte
src/routes/prompts/: +page.js  +page.svelte
src/routes/prompts/[id]/: +page.svelte
src/routes/prompts/[id]/edit/: +page.js  +page.svelte
